--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
             </div>     
         </header>
         <animalCardsArea class="animalCardsArea-wrap">
-            <div class="animalCards-container"></div>
+            <div class="animalCards-container">asdafq</div>
         </animalCardsArea>
         <footer class="footer-wrap">
             <div class="footer-container">
